update lazyload setting

--- a/cp_template.htm
+++ b/cp_template.htm
@@ -242,7 +242,7 @@
                             <source media="(min-width: 992px)" srcset="images/demo/01.jpg">
                             <source media="(min-width: 576px)" srcset="images/demo/01.jpg">
                             <source media="(max-width: 575px)" srcset="images/demo/01.jpg">
-                            <img data-original="images/demo/01.jpg" class="lazy">
+                            <img data-src="images/demo/01.jpg" class="lazy">
                             <noscript><img src="images/demo/01.jpg"></noscript>
                         </picture>
                         <span>圖說</span>
