--- a/lp_album_template.htm
+++ b/lp_album_template.htm
@@ -196,7 +196,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/01.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/01.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/01.jpg">
-                                            <img data-original="images/demo/01.jpg" class="lazy">
+                                            <img data-src="images/demo/01.jpg" class="lazy">
                                             <noscript><img src="images/demo/01.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -217,7 +217,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/02.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/02.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/02.jpg">
-                                            <img data-original="images/demo/02.jpg" class="lazy">
+                                            <img data-src="images/demo/02.jpg" class="lazy">
                                             <noscript><img src="images/demo/02.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -238,7 +238,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/03.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/03.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/03.jpg">
-                                            <img data-original="images/demo/03.jpg" class="lazy">
+                                            <img data-src="images/demo/03.jpg" class="lazy">
                                             <noscript><img src="images/demo/03.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -259,7 +259,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/04.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/04.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/04.jpg">
-                                            <img data-original="images/demo/04.jpg" class="lazy">
+                                            <img data-src="images/demo/04.jpg" class="lazy">
                                             <noscript><img src="images/demo/04.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -280,7 +280,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/05.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/05.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/05.jpg">
-                                            <img data-original="images/demo/05.jpg" class="lazy">
+                                            <img data-src="images/demo/05.jpg" class="lazy">
                                             <noscript><img src="images/demo/05.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -301,7 +301,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/06.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/06.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/06.jpg">
-                                            <img data-original="images/demo/06.jpg" class="lazy">
+                                            <img data-src="images/demo/06.jpg" class="lazy">
                                             <noscript><img src="images/demo/06.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -322,7 +322,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/07.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/07.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/07.jpg">
-                                            <img data-original="images/demo/07.jpg" class="lazy">
+                                            <img data-src="images/demo/07.jpg" class="lazy">
                                             <noscript><img src="images/demo/07.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -343,7 +343,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/08.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/08.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/08.jpg">
-                                            <img data-original="images/demo/08.jpg" class="lazy">
+                                            <img data-src="images/demo/08.jpg" class="lazy">
                                             <noscript><img src="images/demo/08.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -364,7 +364,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/09.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/09.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/09.jpg">
-                                            <img data-original="images/demo/09.jpg" class="lazy">
+                                            <img data-src="images/demo/09.jpg" class="lazy">
                                             <noscript><img src="images/demo/09.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -385,7 +385,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/10.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/10.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/10.jpg">
-                                            <img data-original="images/demo/10.jpg" class="lazy">
+                                            <img data-src="images/demo/10.jpg" class="lazy">
                                             <noscript><img src="images/demo/10.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -406,7 +406,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/11.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/11.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/11.jpg">
-                                            <img data-original="images/demo/11.jpg" class="lazy">
+                                            <img data-src="images/demo/11.jpg" class="lazy">
                                             <noscript><img src="images/demo/11.jpg"></noscript>
                                         </picture>
                                     </div>
@@ -427,7 +427,7 @@
                                             <source media="(min-width: 992px)" data-srcset="images/demo/12.jpg">
                                             <source media="(min-width: 576px)" data-srcset="images/demo/12.jpg">
                                             <source media="(max-width: 575px)" data-srcset="images/demo/12.jpg">
-                                            <img data-original="images/demo/12.jpg" class="lazy">
+                                            <img data-src="images/demo/12.jpg" class="lazy">
                                             <noscript><img src="images/demo/12.jpg"></noscript>
                                         </picture>
                                     </div>
