--- a/cp_template.htm
+++ b/cp_template.htm
@@ -317,31 +317,36 @@
                     <div class="cp_slider">
                         <div class="img-container">
                             <a href="images/demo/06.jpg" data-caption="第1張圖說">
-                                <img src="images/demo/06.jpg" alt="">
+                                <img data-lazy="images/demo/06.jpg" alt="">
+                                <noscript><img src="images/demo/06.jpg" alt=""></noscript>
                                 <span class="caption">第1張圖說</span>
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="images/demo/07.jpg" data-caption="第2張圖說">
-                                <img src="images/demo/07.jpg" alt="">
+                                <img data-lazy="images/demo/07.jpg" alt="">
+                                <noscript><img src="images/demo/07.jpg" alt=""></noscript>
                                 <span class="caption">第2張圖說</span>
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="images/demo/08.jpg" data-caption="第3張圖說">
-                                <img src="images/demo/08.jpg" alt="">
+                                <img data-lazy="images/demo/08.jpg" alt="">
+                                <noscript><img src="images/demo/08.jpg" alt=""></noscript>
                                 <span class="caption">第3張圖說</span>
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="images/demo/10.jpg" data-caption="第4張圖說">
-                                <img src="images/demo/10.jpg" alt="">
+                                <img data-lazy="images/demo/10.jpg" alt="">
+                                <noscript><img src="images/demo/10.jpg" alt=""></noscript>
                                 <span class="caption">第4張圖說</span>
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="images/demo/12.jpg" data-caption="第5張圖說">
-                                <img src="images/demo/12.jpg" alt="">
+                                <img data-lazy="images/demo/12.jpg" alt="">
+                                <noscript><img src="images/demo/12.jpg" alt=""></noscript>
                                 <span class="caption">第5張圖說</span>
                             </a>
                         </div>
