20200911 修改cp_photo_template.htm  html結構，少了一個section結尾

--- a/cp_photo_template.htm
+++ b/cp_photo_template.htm
@@ -340,6 +340,7 @@
                             </li>
                         </ul>
                     </div>
+                </section>
             </div>
         </div>
         <!-- fatfooter Start -->
